code25_all/scala/15893512.txt
run
sbt publish-local
mainClass in (Compile,run) := Some("Hi")

mainClass in (Compile,packageBin) := Some("Hi")

mainClass in (Compile,run,packageBin) := Some("Hi")

C:\work\test_projects\hw\build.sbt:13: error: reassignment to val
mainClass in (run,Compile,packageBin) := Some("Hi")
                                      ^
[error] Type error in expression

